==> iceant/RTOS/Board/UB_GD32F470VGT6/Devices/SPIFlash/spi_flash.c <==
#include <spi_flash.h>
#define sFLASH_CS_LOW()  sFLASH__IO->CS_Low()
#define sFLASH_CS_HIGH()  sFLASH__IO->CS_High()

void sFLASH_Init(sFLASH_IO_T* IO)
{
    sFLASH__IO = IO;
    if(IO){
        if(IO->DeInit){
            IO->DeInit();
        }
        if(IO->Init){
            IO->Init();
        }
    }
}

uint8_t sFLASH_SendByte(uint8_t byte)
{
    #if 0
    /*!< Loop while DAT register in not emplty */
    while (SPI_I2S_GetStatus(sFLASH_SPI, SPI_I2S_TE_FLAG) == RESET)
        ;

    /*!< Send byte through the SPI1 peripheral */
    SPI_I2S_TransmitData(sFLASH_SPI, byte);

    /*!< Wait to receive a byte */
    while (SPI_I2S_GetStatus(sFLASH_SPI, SPI_I2S_RNE_FLAG) == RESET)
        ;

    /*!< Return the byte read from the SPI bus */
    return SPI_I2S_ReceiveData(sFLASH_SPI);
    #endif
    
    return sFLASH__IO->SendByte(byte);
}

uint16_t sFLASH_SendHalfWord(uint16_t HalfWord)
{
    #if 0
    /*!< Loop while DAT register in not emplty */
    while (SPI_I2S_GetStatus(sFLASH_SPI, SPI_I2S_TE_FLAG) == RESET)
        ;

    /*!< Send Half Word through the sFLASH peripheral */
    SPI_I2S_TransmitData(sFLASH_SPI, HalfWord);

    /*!< Wait to receive a Half Word */
    while (SPI_I2S_GetStatus(sFLASH_SPI, SPI_I2S_RNE_FLAG) == RESET)
        ;

    /*!< Return the Half Word read from the SPI bus */
    return SPI_I2S_ReceiveData(sFLASH_SPI);
    #endif
    
    return sFLASH__IO->SendHalfWord(HalfWord);
}
